--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 * {
 
   padding: 0;
@@ -15,18 +19,7 @@ img {
   flex-direction: column;
 }
 
-.article-card  {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  background-color: #f2f2f2;
 
-}
 
 .loading-spinner {
     display: flex;
